# freeagent

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml
freeagent/: __init__.py  __main__.py  agent.py  cli.py  config.py  llm.py  ui.py
freeagent/tools/: __init__.py  github.py  registry.py  search.py  shell.py  vercel.py
freecode/: __init__.py  __main__.py  agent.py  cli.py  config.py  llm.py  ui.py
freecode/tools/: files.py  github.py  registry.py  vercel.py
website/: index.html  styles.css
